--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "hasha": "^3.0.0",
     "helmet": "^3.9.0",
     "mailchimp-api-v3": "^1.8.0",
+    "mongoose": "^5.0.6",
     "nodemailer": "^4.4.1",
     "path": "^0.12.7",
     "request": "^2.83.0",
