--- a/package.json
+++ b/package.json
@@ -20,16 +20,20 @@
   "homepage": "https://github.com/jmisiti42/hellomarcel-landing#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "hasha": "^3.0.0",
     "helmet": "^3.9.0",
     "mailchimp-api-v3": "^1.8.0",
     "mongoose": "^5.0.6",
-    "nodemailer": "^4.4.1",
+    "nodemailer": "^4.6.0",
+    "password-generator": "^2.2.0",
     "path": "^0.12.7",
     "request": "^2.83.0",
-    "superagent": "^3.8.2"
+    "superagent": "^3.8.2",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "pm2": "^2.9.1"
