--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-device": "^0.4.2",
+    "express-fileupload": "^0.4.0",
     "express-session": "^1.15.6",
+    "formidable": "^1.1.1",
     "hasha": "^3.0.0",
     "helmet": "^3.9.0",
     "mailchimp-api-v3": "^1.8.0",
+    "mongodb": "^3.0.2",
     "mongoose": "^5.0.6",
+    "mp3-duration": "^1.1.0",
     "nodemailer": "^4.6.0",
     "password-generator": "^2.2.0",
     "path": "^0.12.7",
