--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "dateformat": "^3.0.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-device": "^0.4.2",
